--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -47,7 +47,7 @@
                     android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
                     android:text='@{item.text}'
                     app:boolExpression='@{!item.check}'
-                    app:falseColor='@{R.attr.clContentContrast}'
+                    app:falseColor='@{R.attr.clContrast}'
                     app:trueColor='@{R.attr.clContent}'
                     tools:targetApi="o"/>
 
