--- a/app/src/main/res/values-v23/styles_app.xml
+++ b/app/src/main/res/values-v23/styles_app.xml
@@ -4,7 +4,7 @@
     <style name="App.Light.UI">
         <item name="colorPrimaryDark">?attr/clPrimary</item>
 
-        <item name="android:windowBackground">?attr/clBackground</item>
+        <item name="android:windowBackground">?attr/clBackgroundWindow</item>
 
         <item name="android:windowLightStatusBar">true</item>
 
@@ -12,7 +12,7 @@
     </style>
 
     <style name="App.Dark.UI">
-        <item name="android:windowBackground">?attr/clBackground</item>
+        <item name="android:windowBackground">?attr/clBackgroundWindow</item>
 
         <item name="android:windowLightStatusBar">false</item>
 
