--- a/app/src/main/res/values/colors_note.xml
+++ b/app/src/main/res/values/colors_note.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Все цвета по большей части из material.io/tools/color -->
+    <!-- All colors almost from material.io/tools/color -->
     <!-- Light - 100 primary -->
     <!-- Accent - 300 primary -->
     <!-- Dark - 100 dark -->
