--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -45,6 +45,7 @@
         <attr name="themePopup" format="integer"/>
         <attr name="styleFab" format="integer"/>
         <attr name="styleSheetAdd" format="integer"/>
+        <attr name="styleProgressHorizontal" format="integer"/>
     </declare-styleable>
 
 </resources>
