Add update progress on edit mode changes
Tag: #New

--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -23,6 +23,7 @@
                  app:isAddEnable='@{isAddEnable}'
                  app:isClearEnable='@{isClearEnable}'/>
 
+        <!-- Container for good performance on ItemTouchHelper.ACTION_STATE_DRAG over top bound. -->
         <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
 
             <include
