Hide divider on note panel for roll note
Tag: #Fix

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -66,6 +66,7 @@
         <include
                 layout="@layout/include_note_panel"
                 app:dataLoad='@{dataLoad}'
+                app:dividerVisible='@{false}'
                 app:editMode='@{editMode}'
                 app:inputAccess='@{inputAccess}'
                 app:item='@{item}'
