--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -85,6 +85,7 @@
         <include
                 layout="@layout/include_note_panel"
                 app:dataLoad='@{dataLoad}'
+                app:dividerVisible='@{true}'
                 app:editMode='@{editMode}'
                 app:inputAccess='@{inputAccess}'
                 app:item='@{item}'
