--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -9,6 +9,8 @@
         <import type="android.view.View"/>
         <import alias="Type" type="sgtmelon.scriptum.model.key.NoteType"/>
 
+        <variable name="dividerVisible" type="boolean"/>
+
         <variable name="menuCallback" type="sgtmelon.scriptum.screen.ui.callback.note.INoteMenu"/>
         <variable name="dataLoad" type="boolean"/>
 
@@ -26,7 +28,10 @@
             android:orientation="vertical"
             tools:layout_gravity="center">
 
-        <View style="@style/Divider.Horizontal"/>
+        <View
+                android:id="@+id/note_panel_divider_view"
+                style="@style/Divider.Horizontal"
+                android:visibility='@{dividerVisible ? View.VISIBLE : View.GONE}'/>
 
         <FrameLayout
                 android:id="@+id/note_panel_button_container"
