Fix divider visible in roll note
Tag: #Fix

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -66,8 +66,8 @@
         <include
                 layout="@layout/include_note_panel"
                 app:dataLoad='@{dataLoad}'
-                app:dividerVisible='@{false}'
                 app:editMode='@{editMode}'
+                app:hideDivider='@{!editMode}'
                 app:inputAccess='@{inputAccess}'
                 app:item='@{item}'
                 app:menuCallback='@{menuCallback}'
