--- a/app/src/main/res/layout/include_roll_add_panel.xml
+++ b/app/src/main/res/layout/include_roll_add_panel.xml
@@ -13,15 +13,17 @@
     </data>
 
     <LinearLayout
-            android:id="@+id/roll_note_enter_container"
+            android:id="@+id/roll_add_panel_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/clPrimary"
             android:orientation="vertical"
             android:visibility='@{editMode ? View.VISIBLE : View.GONE}'
-            tools:layout_gravity="center">
+            tools:layout_gravity="center"
+            tools:visibility="visible">
 
-        <View style="@style/Divider.Horizontal"/>
+        <View android:id="@+id/roll_add_panel_divider_view"
+                style="@style/Divider.Horizontal"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -36,7 +38,7 @@
                 effect using xml
             -->
             <EditText
-                    android:id="@+id/roll_note_enter"
+                    android:id="@+id/roll_add_panel_enter"
                     style="@style/EditText.SingleRow"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -49,7 +51,7 @@
                     tools:text="@string/preview_note_text"/>
 
             <ImageButton
-                    android:id="@+id/roll_note_add_button"
+                    android:id="@+id/roll_add_panel_button"
                     style="@style/Button.Small"
                     android:layout_gravity="bottom"
                     android:contentDescription="@string/description_enter_roll_add"
