Add assertion for all dividers
Tag: #Refactor #Test

--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -13,6 +13,8 @@
             style="?attr/styleToolbar"
             app:popupTheme="?attr/themePopup"/>
 
-    <View style="@style/Divider.Horizontal"/>
+    <View
+            android:id="@+id/toolbar_divider_view"
+            style="@style/Divider.Horizontal"/>
 
 </com.google.android.material.appbar.AppBarLayout>
