--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -78,6 +78,7 @@
                 tools:visibility="gone"/>
 
         <View
+                android:id="@+id/toolbar_note_divider_view"
                 style="@style/Divider.Horizontal"
                 app:visibleTheme='@{theme}'
                 app:visibleOn='@{Theme.LIGHT}'/>
