--- a/app/src/main/res/layout/include_toolbar_rank.xml
+++ b/app/src/main/res/layout/include_toolbar_rank.xml
@@ -80,7 +80,9 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-        <View style="@style/Divider.Horizontal"/>
+        <View
+                android:id="@+id/toolbar_rank_divider_view"
+                style="@style/Divider.Horizontal"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
