--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -59,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/layout_4dp"
                 android:visibility='@{!editMode ? View.VISIBLE : View.GONE}'
+                android:max="0"
                 tools:max="100"
                 tools:progress="65"/>
 
