--- a/iconanim/src/main/res/values/values.xml
+++ b/iconanim/src/main/res/values/values.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
-    <integer name="cancel_anim_time">@android:integer/config_shortAnimTime</integer>
-    <integer name="visible_anim_time">@android:integer/config_shortAnimTime</integer>
+
+    <integer name="icon_animation_time">200</integer>
     
 </resources>
