Add function for save by long press. Add tests for it.
Tag: #New #Test

--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -137,6 +137,7 @@
                         style="@style/Button.Small"
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:onClick='@{() -> menuCallback.onMenuSave(true)}'
+                        android:onLongClick='@{() -> menuCallback.onMenuSave(false)}'
                         android:text="@string/button_note_save"
                         app:enabled='@{item.isSaveEnabled()}'/>
 
