--- a/iconanim/src/main/res/drawable/anim_cancel_enter.xml
+++ b/iconanim/src/main/res/drawable/anim_cancel_enter.xml
@@ -1,6 +1,6 @@
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
-                 android:drawable="@drawable/ic_cancel_enter"
+                 android:drawable="@drawable/ic_cancel_exit"
                  tools:ignore="NewApi">
 
     <target android:name="@string/anim_cancel_group"
