--- a/app/src/main/res/menu/fragment_roll_note.xml
+++ b/app/src/main/res/menu/fragment_roll_note.xml
@@ -3,8 +3,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/item_visible"
-            android:icon="@drawable/ic_visible_exit"
-            android:title="@string/menu_preference"
+            android:icon="@drawable/ic_visible_enter"
+            android:title="@string/menu_roll_visible"
             app:showAsAction="always"/>
 
 </menu>
